# Trajectory_Codes

./: Euler.out  Euler.py  Euler_mod.out  Final_potential.pes  Final_potentialMod.pes  Mod_Euler_full_traj.py  README.md  RK4.out  Run_traj.sh  Traj_test.ipynb  Verlet.out  derivatives.gn  plot.gn  plot_R.gn  test_Euler3.py  traj_test.py  traj_test_Euler.py  traj_test_Euler2.py
