Functions
V1(x,y)=-b1*y**2+B1*y**4+De*(1-exp(-a*(x-1.5)))**2+V_1
S1(x)=1/(1+exp(-sw1*(x-spx1)))
V2(x,y)=-a2*(x-2.1)**2+V_2-b2*y**2+B2*y**4+Sl*exp(fl*(x-ex1))
V3(x,y)=-CpW*exp((-k2/(x-1)**4)*y**2)-by*y**2 +By*y**4+V_3
S2(x)=1/(1+exp(-sw2*(x-spx2)))
V(x,y)=V1(x,y)*(1-S1(x))+S1(x)*V2(x,y)*(1-S2(x))+S2(x)*V3(x,y)


Derivatives
dS1(x)=sw1*S1(x)*(1-S1(x))
dS2(x)=sw2*S2(x)*(1-S2(x))

dV1_dx(x)=2*De*a*(1-exp(-a*(x-1.5)))*exp(-a*(x-1.5))
dV1_dy(y)=-2*b1*y+4*B1*y**3

dV2_dx(x)=-2*a2*(x-2.1)+Sl*fl*exp(fl*(x-ex1))
dV2_dy(y)=-2*b2*y+4*B2*y**3

dV3_dx(x,y) = (-4*k2*y**2*CpW/(x-1)**5)*exp((-k2/(x-1)**4)*y**2)
dV3_dy(x,y) = (2*k2*y*CpW/(x-1)**4)*exp((-k2/(x-1)**4)*y**2) - 2*by*y + 4*By*y**3

dV_dx(x,y)=dV1_dx(x)*(1-S1(x)) - V1(x,y)*dS1(x) + dS1(x)*V2(x,y)*(1-S2(x)) - dS2(x)*S1(x)*V2(x,y) + S1(x)*(1-S2(x))*dV2_dx(x) + dS2(x)*V3(x,y) + S2(x)*dV3_dx(x,y)
dV_dy(x,y)=(1-S1(x))*dV1_dy(y) + S1(x)*(1-S2(x))*dV2_dy(y) + S2(x)*dV3_dy(x,y)

sw2 = 17
	spx2 = 2.6
	CpW = 58.1
	k2 = 0.4
	by = 0.0035
	By = 1.2e-06
	V_3 = 15.5
	a2 = 150
	V_2 = 44.2
	b2 = 0.00499
	B2 = 1.35e-06
	Sl = 1.7
	fl = 9
	ex1 = 2.3
	sw1 = 15
	spx1 = 1.9
	b1 = 0.0011
	B1 = 1.79904862716992e-06
	De = 57.2617535188108
	a = 3.1
	V_1 = 0.196
set xrange [1.3:3]
set yrange [-60:60]
splot dV_dx(x,y)
